[package]
name = "rust-usage"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.53"
bytes = "1.1.0"
thiserror = "1.0.30"
tokio = {version = "1.17.0",features = ["full"]}

[workspace]
members = [
    "diskhash",
    "proc-marcos",
    "type-exercise",
    "v8-live"
]
