[package]
name = "rust-pratice"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.53"
bytes = "1.1.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }

[workspace]
members = [
    "diskhash",
    "proc-marcos",
    "type-exercise",
    "v8-live",
    "deno",
    "kv",
    "pow",
    "runtime",
]
