[package]
name = "deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno = "1.21.2"
lazy_static = "1.4.0"
deno_core = "0.133.0"
tokio = { version = "1", features = ["full"] }
zstd = "0.11"

[build-dependencies]
deno_core = "0.133.0"
zstd = "0.11"