[package]
name = "proc-marcos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[example]]
name = "sql"
path = "examples/sql.rs"

[dependencies]
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
heck = "0.4"
askama = "0.11"
litrs = "0.2"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["extra-traits"]}