[package]
name = "v8-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
once_cell = "1.10.0"
lazy_static = "1"
v8 = "0.41.0"
serde_v8 = "0.37"
serde = "1.0.136"
serde_json = "1.0.42"
reqwest = { version = "0.11.10", features = ["blocking"] }